# frappe_painter

./: MANIFEST.in  README.md  package.json  pyproject.toml  setup.py
.claude/: settings.local.json
frappe_painter/: hooks.py  modules.txt
frappe_painter/doctype/painter_settings/: painter_settings.json  painter_settings.py
frappe_painter/frappe_painter/doctype/painter_settings/: painter_settings.json  painter_settings.py
frappe_painter/frappe_painter/doctype/painter_theme/: painter_theme.js  painter_theme.json  painter_theme.py
frappe_painter/overrides/: theme.py
frappe_painter/public/: build.json
frappe_painter/public/css/: painter.bundle.css  painter.css
frappe_painter/public/js/: painter.bundle.js  painter.js  painter_extensions.bundle.js
public/: build.json
public/css/: painter.bundle.css
public/js/: painter.bundle.js
