[project]
name = "frappe_painter"
authors = [
    { name = "TSE", email = "admin@tse.com" }
]
description = "Comprehensive UI/UX Theme Customizer for Frappe/ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
